# cmaketest

./: .gitignore  CMakeLists.txt  README.md  cmake_main.bat  index.cpp  spdlog_install.bat  temp.cpp  temp.hpp
